--- a/SuperBandMan.Android/Properties/AndroidManifest.xml
+++ b/SuperBandMan.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="SuperBandMan.Android" android:versionCode="1" android:versionName="1.0">
-	<uses-sdk />
-	<application android:label="SuperBandMan.Android" android:icon="@drawable/Icon"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="SuperBandMan.SuperBandMan" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="19" />
+	<application android:label="SuperBandMan" android:icon="@drawable/Icon"></application>
 </manifest>
